# tilibs

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
libticables/tags/3.8.4/: Makefile.am  config.h.in
libticables/trunk/: AUTHORS  CMakeLists.txt  CONFIG  COPYING  ChangeLog  LOGO  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  ticables2.pc.in
libticables/trunk/com/: Cables.cpp  Cables.h  Cables.rgs  StdAfx.h  Types.cpp  Types.h  Types.rgs  cticables2.def  cticables2.dsp  cticables2.dsw  cticables2.h  cticables2.tlb  cticables2_i.c  cticables2_p.c  cticables2ps.mk  dlldata.c  helpers.cpp  helpers.h
libticables/trunk/debian/: changelog  control  docs  libticables2-1.dirs  libticables2-1.install  libticables2-1.postinst  libticables2-1.postrm  libticables2-1.udev  libticables2-2.udev  rules
libticables/trunk/docs/: Makefile  Makefile.am  Makefile.in  api.txt
libticables/trunk/macros/: Makefile.in
libticables/trunk/man/: Makefile.in
libticables/trunk/osx/: ChangeLog  config.h  libTIcables.pmsp
libticables/trunk/po/: POTFILES.in  de.po  fr.gmo  fr.po  libticables.pot  libticables2.pot
libticables/trunk/src/: Makefile.am  Makefile.in  avr_link.c  avr_link.h  cabl_def.h  cabl_err.h  cabl_ext.h  cabl_int.h  cabl_ver.h  compat.h  data_log.c  data_log.cc  data_log.h  default.c  default.h  detect.c  detect.cc  dev_link.c  dev_link.h  dfl_link.c  dfl_link.h  direct.c  error.c  error.cc  error.h  export.h  export1.h  externs.h  gettext.h  hex2dbus.c  hex2dbus.cc  hex2dusb.c  hex2dusb.cc  hex2nsp.c  hex2nsp.cc  internal.h  intl.h  intrface.c  iocompat.h  ioports.c  (+89 more)
libticables/trunk/tests/: CMakeLists.txt  Makefile.am  Makefile.in  test_ticables.c  test_ticables_2.c  test_ticables_2.cc  ticables2.supp  torture_ticables.c  vcheck
libticables/trunk/win32/: Makefile.in
libticalcs/tags/4.5.1/: Makefile.am  README  configure.in  ticalcs.pc.in
libticalcs/trunk/: .FBCIndex  AUTHORS  CMakeLists.txt  ChangeLog  LOGO  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  libticalcs.spec.in  ticalcs-4.pc.in  ticalcs-config.in  ticalcs2.pc.in
libticalcs/trunk/debian/: changelog  control  copyright  libticalcs2-5-dev.dirs  rules
libticalcs/trunk/docs/: Makefile  Makefile.am  Makefile.in  api.txt  romdump.txt
libticalcs/trunk/intl/: Makefile  plural.c
libticalcs/trunk/macros/: Makefile.in
libticalcs/trunk/man/: Makefile.am  Makefile.in
libticalcs/trunk/osx/: config.h  libTIcalcs.pmsp
libticalcs/trunk/po/: Makefile.in  POTFILES.in  de.po  fr.po  libticalcs.pot  libticalcs2.pot
libticalcs/trunk/src/: Makefile.am  Makefile.in  backup.c  backup.cc  calc_00.c  calc_00.cc  calc_73.c  calc_73.cc  calc_80.c  calc_82.c  calc_83.c  calc_84p.c  calc_84p.cc  calc_84p_usb.c  calc_85.c  calc_86.c  calc_89.c  calc_89t.c  calc_89t.cc  calc_89t_usb.c  calc_8x.c  calc_8x.cc  calc_92.c  calc_9x.c  calc_9x.cc  calc_def.h  calc_err.h  calc_ext.h  calc_int.h  calc_nsp.c  calc_nsp.cc  calc_ver.h  calc_xx.c  calc_xx.cc  calc_xx.h  calclabequipmentdata.cc  calclabequipmentdata.h  clock.c  clock.cc  clock.h  (+166 more)
libticalcs/trunk/src12/: Makefile.am  Makefile.in
libticalcs/trunk/tests/: CMakeLists.txt  Makefile.am  Makefile.in  input_dbus_ti68k_cbl2_get_single_measurement_from_chan1_through_labeqdata.txt  input_dbus_ti68k_cbl2_play_sound_through_labeqdata.txt  input_dbus_ti68k_cbl2_set_all_leds_off_through_raw.txt  input_dbus_ti68k_cbl2_set_all_leds_on_through_dbus.txt  input_dbus_ti68k_send_7_get_labeq_data_through_labeqdata.txt  input_dbus_ti68k_send_7_get_list_data_through_raw.txt  input_dbus_ti68k_send_7_through_labeqdata_get_labeq_data_through_dbus.txt  input_dusb_is_ready_through_raw.txt  input_dusb_is_ready_through_raw_sendrecv.txt  input_nnse_initial_nspire_communication_through_raw.txt  test_ticalcs.c  test_ticalcs_2.c  test_ticalcs_2.cc  ticalcs2.supp  torture_ticalcs.c  torture_ticalcs.cc  vcheck
libticalcs/trunk/win32/: Makefile.in
libticonv/trunk/: AUTHORS  CMakeLists.txt  ChangeLog  LOGO  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  ticonv.pc.in  ticonv.pro
libticonv/trunk/debian/: changelog  control  copyright  docs  libticonv2-dev.install  libticonv3-dev.docs  libticonv3-dev.install  rules
libticonv/trunk/docs/: Makefile.am  Makefile.in  ReadMe.txt  api.txt
libticonv/trunk/src/: Makefile.am  Makefile.in  charset.c  charset.cc  charset.h  export4.h  filename.c  filename.cc  iconv.c  iconv.cc  logging.h  stdints.h  stdints4.h  ticonv.c  ticonv.cc  ticonv.h  tokens.c  tokens.cc  type2str.c  type2str.cc
libticonv/trunk/tests/: CMakeLists.txt  Makefile.am  Makefile.in  test_ticonv.c  test_ticonv.cc  torture_ticonv.c
libtifiles/trunk/: AUTHORS  CMakeLists.txt  ChangeLog  LOGO  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  libtifiles.spec.in  tifiles2.pc.in
libtifiles/trunk/debian/: changelog  control  libtifiles2-4-dev.install  libtifiles3-dev.dirs  rules
libtifiles/trunk/docs/: Makefile  Makefile.am  Makefile.in  api.txt
libtifiles/trunk/macros/: Makefile.am  Makefile.in  tifiles.m4
libtifiles/trunk/man/: Makefile.in  tifiles-config.1
libtifiles/trunk/osx/: config.h  libTIfiles.pmsp
libtifiles/trunk/po/: POTFILES.in  de.po  fr.po  libtifiles.pot  libtifiles2.pot
libtifiles/trunk/src/: Makefile.am  Makefile.in  cert.c  cert.cc  comments.c  comments.cc  error.c  error.cc  error.h  export.h  export2.h  file_def.h  file_err.h  file_int.h  file_ver.h  files8x.c  files8x.cc  files8x.h  files9x.c  files9x.cc  files9x.h  filesnsp.c  filesnsp.cc  filesnsp.h  filesxx.c  filesxx.cc  filesxx.h  filetypes.c  filetypes.cc  gettext.h  grouped.c  grouped.cc  grp_ops.c  grp_ops.h  intelhex.c  intelhex.cc  intelhex.h  internal.h  intl.h  (+66 more)
tifileutil/: AUTHORS  CMakeLists.txt  Makefile.am  configure.ac
tifileutil/man/: Makefile.am  Manpage.txt  tifileutil.1
tifileutil/po/: POTFILES.in  fr.po
tifileutil/src/: Makefile.am  logging.h  main.cc
(+1901 files in other folders)
